# toss-auto-traders

./: .env.example  .gitignore  README.md  pyproject.toml
src/toss_auto_traders/: bootstrap.py  cli.py  config.py
src/toss_auto_traders/api/: __init__.py  account.py  client.py  endpoints.py  market.py  order.py
src/toss_auto_traders/engine/: __init__.py  risk.py  runner.py
src/toss_auto_traders/strategy/: __init__.py  moving_average.py
src/toss_auto_traders/web/: __init__.py  dashboard.html  holdings_view.py  server.py
