[project]
name = "toss-auto-traders"
version = "0.1.0"
description = "A cautious skeleton for Toss Securities Open API based automated trading."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
toss-trader = "toss_auto_traders.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
